<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReadyDoctor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

   
    <!-- Apointment -->
    <string name="recoverymail">Recovery mail address</string>
    <string name="begin">Your appointment will begin between</string>
    <string name="infotext">We will hold your appointment request for 25 minutes while you answer a few question.</string>
    <string name="visit_purpose">Please briefly describe the purpose of your visit:</string>
    <string name="time_period">When did you start feeling this way?</string>
    <!-- Home -->
    <string name="me">Me</string>
    <string name="myhealth">My Health</string>
    <string name="appointment">Appointments</string>

    <!-- Medication -->
    <string name="medication_text">Please tell us if you are currently taking any medications,and if so,how long?</string>
    <string name="spinner_title">The past week</string>
    <string name="spinner_gender">Gender</string>
    <string name="spinner_blood">Blood Group</string>

    <!-- Alergies -->
    <string name="allergies">Please tell us any allergies you have: </string>

    <!-- Symtoms -->
    <string name="symptoms">Do you have any of the symptoms? Tap all that apply.</string>

    <!-- Medical condition -->
    <string name="medical_condition">Please let us know if you have any medical conditions. Tap all that apply.</string>

    <!--Your child-->
    <string name="child">Who is the patient?</string>

    <!-- Apply coupon page -->
    <string name="couponmsg">Do you have coupon code to use with Ready Doctor? </string>
    <!-- Landing -->

    <string name="ondemand">On Demand</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="meetus">Meet Us</string>

    <!-- Login Page -->
    <string name="email_hint">Email Address</string>
    <string name="pass_hint">Password</string>
    <string name="iforgot_text">I Forgot My Password</string>

    <!-- SignUp -->
    <string name="name">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="iagree">I agree to Doctor on Demands\'s</string>
    <string name="tc">Terms of Use &amp; Informed Consent </string>

    <!-- navigation drawer -->
    <string name="getfree">Get Free Visits!</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="addreferal">Add Referral Source</string>
    <string name="updateemail">Update Email &amp; Password</string>
    <string name="updatename">Update Name &amp; Address</string>
    <string name="updatepayment">Update Payment Method</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="Feedback">Feedback</string>
    <string name="SignOut">Sign Out</string>

    <!-- Support -->

    <string name="Support_msg">Are you having issue with doctors or not sure how to use our service? We are here to help.</string>






    <!--video chat-->
    <string name="action_log_out">Log out</string>
    <string name="login_as">Login as</string>
    <string name="logged_in_as">Logged In as</string>
    <string name="outputing_audio_call">Outputing Audio Call - </string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="connect">Connect...</string>
    <string name="checking">Checking...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="hung_up_processing">Hang up call command are processing ...</string>


    <string name="welcoming_message">Login as any user on this deviсe and another(s) users on another device</string>
    <string name="select_user_to_call">Select Users You Want to Call</string>
    <string name="choose_one_opponent">Choose one opponent</string>
    <string name="service_launched">Service for listening to calls launched</string>
    <string name="service_stopped">Service for listening to calls stopped</string>


    <!--  //temporary values -->
    <string name="only_peer_to_peer_calls">Only 1-to-1 calls are available</string>

    <!--   //Progress Dialog -->
    <string name="load_opponents">Load opponents ...</string>
    <string name="wait_until_loading_finish">Wait until loading finish</string>

    <string name="processes_login">Login ...</string>
    <string name="wait_until_login_finish">Wait until login finish</string>
    <string name="processes_relogin">Relogin ...</string>


    <string name="btn_audio_call">AUDIO CALL</string>
    <string name="btn_video_call">VIDEO CALL</string>
    <string name="opponentsListActionBarTitle"><![CDATA[Video & Audio Chat Sample]]></string>
    <string name="current_version">0.9.1</string>
    <string name="rejected">Rejected</string>
    <string name="noAnswer">No answer</string>
    <string name="hungUp">Hung up</string>
    <string name="closed">Closed</string>
    <string name="time_out">Time Out</string>
    <string name="failed">Failed</string>
    <string name="WIFI_DISABLED">Call was stoped because connection was lost</string>
    <string name="NETWORK_ABSENT">Connection lost</string>
    <string name="internet_not_connected">Please check your Internet connection</string>
    <string name="initializing_in_chat">Initializing in chat, please wait...</string>
    <string name="ok_button">OK</string>

    <string name="quit_dialog_title">Exit</string>
    <string name="quit_dialog_message">Press \"Minimize\" to minimize the application or the \"Exit with log out\" to log out and exit from the app</string>
    <string name="positive_response">Exit with log out</string>
    <string name="negative_response">Minimize</string>
    <string name="log_out_dialog_title">Log out</string>
    <string name="log_out_dialog_message">Are you sure?</string>
    <string name="positive_button">Log out</string>
    <string name="negative_button">Cancel</string>


    <color name="white">#FFFFFF</color>
    <color name="blue_green">#008080</color>
    <color name="grey">#606060</color>
    <color name="gold">#FFD700</color>
    <color name="spring_bud">#A7FC00</color>
    <color name="water_bondi_beach">#0095B6</color>
    <color name="coral">#FF4040</color>
    <color name="lime">#00FF00</color>
    <color name="may_green">#4C9141</color>
    <color name="mauveine">#EF0097</color>
    <color name="blue">#1FCECB</color>
    <color name="orange">#FFA500</color>
    <color name="gentianaceae_blue">#2A6478</color>
    <color name="blue_krayola">#1F75FE</color>
    <color name="red">#FF0000</color>
    <color name="white_blue">#00BFFF</color>
    <color name="pink">#FF7A7A</color>
    <color name="green">#45D100</color>
    <color name="white_green">#A9FF80</color>
    <color name="black_transparent_30">#30000000</color>
    <color name="black_transparent_50">#50000000</color>
    <color name="white_transparent_80">#80FFFFFF</color>
</resources>