<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/logo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/logo"
            android:fontFamily="sans-serif-light"
            android:text="@string/ondemand"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/signin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_sky" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/header"
        android:background="@drawable/card_bg" >

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/Gray" />

        <RelativeLayout
            android:id="@+id/meet_us"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/divider" >

            <TextView
                android:id="@+id/meetus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/meetus"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signup_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/divider" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/signup"
                android:src="@drawable/right_arrow" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/signup"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_pink" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/seemedical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/see_doctor_btn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/seemedical"
        android:layout_marginTop="20dp" >
        <ImageView
            android:id="@+id/medical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/mid"
            android:layout_above="@+id/mid"
            android:layout_margin="10dp"
            android:src="@drawable/medical_options" />

        <ImageView
            android:id="@+id/physcology"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/mid"
            android:layout_above="@+id/mid"
            android:layout_margin="10dp"
            android:src="@drawable/psychology_options" />
        <TextView
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="1dp"
            android:visibility="invisible"
            android:text="."> </TextView>
        <ImageView
            android:id="@+id/pediatrics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/mid"
            android:layout_below="@+id/mid"
            android:layout_margin="10dp"
            android:src="@drawable/child_disease_options" />
        <ImageView
            android:id="@+id/pregnancy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/mid"
            android:layout_below="@+id/mid"
            android:layout_margin="10dp"
            android:src="@drawable/pregnancy_options"
            /> >
    </RelativeLayout>
</RelativeLayout>